🔧 fix(AccessDenied.cshtml): update class names for header and paragraphs to improve semantics and consistency 🔧 fix(AccessDenied.cshtml): update class names for links to improve semantics and consistency 🔧 fix(Resources.cshtml): update hidden caption text for table to improve semantics and clarity 🔧 fix(Resources.cshtml): update heading text for table to improve semantics and clarity 🔧 fix(Resources.cshtml.cs): update display name for Name property to improve semantics and clarity 🔧 fix(Resources.cshtml.cs): update display name for Version property to improve semantics and clarity 🔧 fix(_LoginPartial.cshtml): update class names for links to improve semantics and consistency 🔧 fix(site.css): update color and hover behavior for links to improve visibility and user experience

--- a/BenchmarkingPortal.Web/wwwroot/css/site.css
+++ b/BenchmarkingPortal.Web/wwwroot/css/site.css
@@ -21,6 +21,18 @@ body > .container, body > .container > .pb-3 {
     min-height: 100%;
 }
 
+a {
+    color: var(--ftsrg);
+}
+
+a:hover {
+    color: black;
+}
+
+a:active {
+    color: black;
+}
+
 .navbar {
     font-weight: bold;
 }
@@ -35,6 +47,7 @@ body > .container, body > .container > .pb-3 {
     font-weight: bold;
     background-color: white;
     color: var(--ftsrg);
+    border-radius: 50rem;
 }
 
 .nav-pills .nav-link.active {
@@ -94,13 +107,7 @@ h3 {
     color: black;
 }
 
-.btn-danger:active {
-    background-color: var(--ftsrg);
-    border-color: var(--ftsrg);
-    color: black;
-}
-
-.btn-danger:focus {
+.btn-danger:active, .btn-danger:focus, .btn-danger:focus:active {
     background-color: var(--ftsrg);
     border-color: var(--ftsrg);
     color: black;
@@ -120,6 +127,11 @@ h3 {
 .form-check-input:checked {
     background-color: var(--ftsrg);
     border-color: var(--ftsrg);
+}
+
+.danger {
+    color: var(--ftsrg);
+    font-weight: bold;
 }
 
 .invalid-tooltip {
